# demo-fast-api

./: .gitignore  README.md
app/: main.py  pyproject.toml
