[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.4"
coloredlogs = "^15.0.1"
fastapi = "^0.82.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
